// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Catalog form component should render add variant form 1`] = `
<div
  className="container-fluid"
>
  <Connect(MiqFormRenderer)
    buttonsLabels={
      Object {
        "submitLabel": "Add",
      }
    }
    canReset={false}
    onCancel={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
    schema={
      Object {
        "fields": Array [
          Object {
            "component": "sub-form",
            "fields": Array [
              Object {
                "autoFocus": true,
                "component": "text-field",
                "label": "Name",
                "maxLength": 40,
                "name": "name",
                "validate": Array [
                  [Function],
                ],
                "validateOnMount": true,
              },
              Object {
                "component": "text-field",
                "label": "Description",
                "maxLength": 60,
                "name": "description",
              },
            ],
            "name": "basic-info",
            "title": "Basic Info",
          },
          Object {
            "component": "hr",
            "name": "hr",
          },
          Object {
            "component": "sub-form",
            "fields": Array [
              Object {
                "allToRight": false,
                "assignFieldProvider": true,
                "component": "dual-list-select",
                "leftId": "available_fields",
                "leftTitle": "Unassigned:",
                "moveLeftTitle": "Move Selected buttons left",
                "moveRightTitle": "Move Selected buttons right",
                "name": "service_templates",
                "options": Array [
                  Object {
                    "key": "http://localhost:3000/api/service_templates/44",
                    "label": "template 44",
                  },
                  Object {
                    "key": "http://localhost:3000/api/service_templates/10",
                    "label": "template 10",
                  },
                ],
                "rightId": "selected_fields",
                "rightTitle": "Selected:",
                "size": 8,
              },
            ],
            "name": "assign-catalog-items",
            "title": "Assign Catalog Items",
          },
        ],
      }
    }
  />
</div>
`;

exports[`Catalog form component should render edit variant form 1`] = `
<div
  className="container-fluid"
>
  <Connect(MiqFormRenderer)
    buttonsLabels={
      Object {
        "submitLabel": "Save",
      }
    }
    canReset={true}
    initialValues={
      Object {
        "description": "This is a DROGO!",
        "name": "DROGO",
        "service_templates": Array [
          "http://localhost:3000/api/service_templates/2",
          "http://localhost:3000/api/service_templates/6",
        ],
      }
    }
    onCancel={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
    schema={
      Object {
        "fields": Array [
          Object {
            "component": "sub-form",
            "fields": Array [
              Object {
                "autoFocus": true,
                "component": "text-field",
                "label": "Name",
                "maxLength": 40,
                "name": "name",
                "validate": Array [
                  [Function],
                ],
                "validateOnMount": true,
              },
              Object {
                "component": "text-field",
                "label": "Description",
                "maxLength": 60,
                "name": "description",
              },
            ],
            "name": "basic-info",
            "title": "Basic Info",
          },
          Object {
            "component": "hr",
            "name": "hr",
          },
          Object {
            "component": "sub-form",
            "fields": Array [
              Object {
                "allToRight": false,
                "assignFieldProvider": true,
                "component": "dual-list-select",
                "leftId": "available_fields",
                "leftTitle": "Unassigned:",
                "moveLeftTitle": "Move Selected buttons left",
                "moveRightTitle": "Move Selected buttons right",
                "name": "service_templates",
                "options": Array [
                  Object {
                    "key": "http://localhost:3000/api/service_templates/44",
                    "label": "template 44",
                  },
                  Object {
                    "key": "http://localhost:3000/api/service_templates/10",
                    "label": "template 10",
                  },
                  Object {
                    "key": "http://localhost:3000/api/service_templates/2",
                    "label": "template 2",
                  },
                  Object {
                    "key": "http://localhost:3000/api/service_templates/6",
                    "label": "template 6",
                  },
                ],
                "rightId": "selected_fields",
                "rightTitle": "Selected:",
                "size": 8,
              },
            ],
            "name": "assign-catalog-items",
            "title": "Assign Catalog Items",
          },
        ],
      }
    }
  />
</div>
`;
